--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -16,7 +16,7 @@
   <!-- <h1 class="searchedFor" ng-if="searchedFor">
     <small>Searched for:</small> {{searchedFor}}
   </h1> -->
-<section class="search_results">
+<section class="search-results" ng-if="customers.length > 0">
   <header>
     <h1 class="h3">Results</h1>
   </header>
