--- a/app/assets/javascripts/templates/customer_detail.html
+++ b/app/assets/javascripts/templates/customer_detail.html
@@ -12,29 +12,30 @@
             <div class="form-group col-md-4">
               <label class="sr-only" for="first-name">First Name</label>
               <input type="text" class="form-control"
-                     name="first-name" value="Bob">
+                     name="first-name" ng-model="customer.first_name">
             </div>
             <div class="form-group col-md-4">
               <label class="sr-only" for="last-name">Last Name</label>
               <input type="text" class="form-control"
-                     name="last-name" value="Jones">
+                     name="last-name" ng-model="customer.last_name">
             </div>
             <div class="form-group col-md-4">
               <label class="sr-only" for="username">Username</label>
               <div class="input-group">
                 <div class="input-group-addon">@</div>
                 <input type="text" class="form-control"
-                       name="username" value="bobert123">
+                       name="username" ng-model="customer.username">
               </div>
             </div>
           </div>
           <label class="sr-only" for="email">Email</label>
           <input type="text" class="form-control"
-                 name="email" value="bobbyj@somewhere.net">
+                 name="email" ng-model="customer.email">
         </form>
       </section>
       <footer class="panel-footer">
-        <label for="joined">Joined</label> 12/13/2014
+        <label for="joined">Joined</label>
+        {{ customer.joined_at | date }}
       </footer>
     </article>
     <article class="panel panel-default">
